--- a/css/default.css
+++ b/css/default.css
@@ -1,10 +1,50 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+
+  ::-webkit-scrollbar-track {
+  background: #1F184F; 
+}
+
+/* Handle */
+
+  ::-webkit-scrollbar-thumb {
+  background: #F43A62; 
+  border-radius: 20px;
+}
+
+  
+
 html {
   box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
 }
-*{
+.one img{
+
+  margin-top: 20px;
+  width: 120px;
+}
+.one h3{
+  color:white;
+  font-size: 24px;
+  margin-top: -5px;
+  margin-bottom: 10px;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  text-align: center;
+  font-weight: 600;
+}
+.one p{
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+s*{
   margin: 0px;
 }
 .first h1{
@@ -40,7 +80,7 @@ body {
   transform: translateY(-70px);
 }
 .one{
-  height:400px;
+  max-height:450px;
   width: 350px;
   background-color: #f43a62;
   display: inline-block;
@@ -49,11 +89,10 @@ body {
   cursor: pointer;
 }
 .one:hover{
-  -webkit-box-shadow: 0px 0px 41px 17px rgba(71,62,138,1);
--moz-box-shadow: 0px 0px 41px 17px rgba(71,62,138,1);
-box-shadow: 0px 0px 41px 17px rgba(71,62,138,1);
+box-shadow: 0px 0px 41px 15px rgba(71,62,138,1);
   transition: 0.3s linear;
 }
+
 @keyframes float {
   0% {
     transform: translate(0px, 0px);
@@ -73,7 +112,6 @@ box-shadow: 0px 0px 41px 17px rgba(71,62,138,1);
 }
 .s{
   margin-left: 60px;
-
 }
 .header{
   min-height: 100vh;
@@ -881,6 +919,7 @@ box-shadow: 0px 0px 41px 17px rgba(71,62,138,1);
     font-size: 24px;
 
   }
+
   .covid, .earth, .earth-detail {
     transform: scale(0.6);
  }
