--- a/css/default.css
+++ b/css/default.css
@@ -48,7 +48,12 @@
   right: 5%;
   transform: translateY(-50%);
   top: 40%;
+  width: 50%;
 
+}
+.foto img{
+  width: 100%;
+  height: auto;
 }
 .dhole{
   display: inline-block;
@@ -151,8 +156,7 @@ body {
   cursor: pointer;
 }
 .one:hover{
-box-shadow: 0px 0px 41px 15px rgba(71,62,138,1);
-  transition: 0.3s linear;
+box-shadow: 0px 0px 41px  6px rgba(71,62,138,1);
 }
 
 @keyframes float {
@@ -194,8 +198,7 @@ canvas {
 
 section {
   margin: 100px 30px ;
-  max-width: 1000px;
-  width: 95%;
+  width: 50%;
   position: relative;
 }
 #overlay {
@@ -262,6 +265,7 @@ section > div.info ul {
   section > div.info ul {
     width: 200px;
   }
+
 }
 
 li {
@@ -1097,5 +1101,82 @@ li {
   .mask {
     top: -32%;
  }
+ .info h1 {
+  text-align: center;
+  transform: translateY(0px);
+  color: white;
+  font-size: 32px;
+  font-weight: 300;
+  width: 100vw;
+}
+.inf{
+  text-align: center;
+}
+.inf .sidetxt {
+  position: relative;
+  transform: translateY(0px);
+  color: white;
+  width: 98%;
+left: 1%;
+right: 1%;
+  transform: translateY(0%);
+  display: block;
+  margin-top: 5%;
+}
+.inf .sidetxt p {
+  font-size: 12px;
+  font-weight: 100;
+}
+.inf .sidetxt h2{
+  font-size: 18px;
+}
+section{
+  width: 100%;
+  margin: auto;
+}
+.foto{
+  display: none;
+}
+.fotofon{
+  display: block!important;
+  
+}
+.fotofon{
+  display: block;
+  margin-top: 20%;
+  width: 100%;
+
+}
+.fotofon img{
+  width: 100%;
+  height: auto;
+}
+.simp {
+  display: inline-block;
+  text-align: center;
+  margin-left: 0px;
+  margin-top: 60px;
+  width: 30%;
+}
+.simp img{
+  width: 100%;
+  height: auto;
+}
+.dhole {
+  display: block;
+  position: relative;
+  left: 0%;
+  transform: translateY(0%);
+  top: 0%;
+width: 100%;
+margin-top: 20%;
+}
+.dhole img{
+  height: 400px;
+  width: auto;
+}
 }
 
+.fotofon{
+  display:none;
+}
